--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
 html,
-body {
+body,
+#root {
 	margin: 0;
 	padding: 0;
+	width: 100%;
 	height: 100%;
 }
 
@@ -10,8 +12,4 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-}
-
-canvas {
-	display: block;
 }
