--- a/src/Components/LinkGroup/LinkButton.css
+++ b/src/Components/LinkGroup/LinkButton.css
@@ -18,6 +18,7 @@
 	text-align: center;
 	text-decoration: none;
 	cursor: pointer;
+	user-select: none;
 	transition: transform 0.8s, background-image 0.8s;
 }
 
